# mre-uniffi-future-leak-swift

./: README.md
rust-side/test_future_ffi/: Cargo.toml  justfile
rust-side/test_future_ffi/src/: lib.rs
swift-side/testRustFuture/testRustFuture/: main.swift
swift-side/testRustFuture/testRustFuture.xcodeproj/: project.pbxproj
swift-side/testRustFuture/testRustFuture.xcodeproj/project.xcworkspace/xcuserdata/bolo.xcuserdatad/: UserInterfaceState.xcuserstate
swift-side/testRustFuture/testRustFuture.xcodeproj/xcuserdata/bolo.xcuserdatad/xcschemes/: xcschememanagement.plist
